# vlabs-sdk

./: .gitignore  CONTRIBUTING.md  MIGRATION.md  PROVENANCE.md  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
src/verifiable_labs_envs/: __init__.py
src/verifiable_labs_envs/formal_spec/: clean_pipeline.py  clean_vgs.py  contamination_risk.py  contamination_splits.py  formulas.py  generalization_gap.py
src/verifiable_labs_envs/providers/: base.py
src/verifiable_labs_envs/schemas/: assurance_card.py  results.py  splits.py
src/vlabs_sdk/: __init__.py  run_config.py
src/vlabs_sdk/formal_spec/: __init__.py  clean_promotion_gate.py  contamination_splits.py  formulas.py  gate.py  generated_after_freeze.py  invariance.py
src/vlabs_sdk/providers/: __init__.py  base.py  dummy_provider.py
src/vlabs_sdk/schemas/: __init__.py  contract.py
tests/sdk/: test_wave0_contracts.py
tools/vlabs-prm-eval/: README.md  pyproject.toml
tools/vlabs-prm-eval/src/vlabs_prm_eval/: __init__.py  clean_gate.py  cli.py  gate.py
tools/vlabs-prm-eval/tests/: test_clean_gate.py  test_gate.py
tools/vlabs-prm-eval/tests/fixtures/: card_new_accept.json  card_old.json  card_reject_calib.json  card_reject_cost.json  card_reject_hack.json  card_reject_latency.json  card_reject_ood.json  card_reject_regression.json  card_reject_vgs.json
tools/vlabs-prm-eval/tests/fixtures/clean/: clean_new_accept.json  clean_new_warnings.json  clean_old.json  clean_reject_calib.json  clean_reject_clean_vgs.json  clean_reject_cost.json  clean_reject_dcr.json  clean_reject_hack.json  clean_reject_latency.json  clean_reject_ood.json  clean_reject_regression.json
